--- a/example-1/menu.html
+++ b/example-1/menu.html
@@ -14,6 +14,10 @@
           <li><a href="">Store</a></li>
           <li><a href="">Contact</a></li>
         </ul>
+        <ul class="social">
+          <li><a href="" class="fb">facebook</a></li>
+          <li><a href="" class="tw">twitter</a></li>
+        </ul>
       </nav>
 
     </div>
